First Release apimanager
